Apps/churn_prediction_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churn_prediction_ingress
spec:
  defaultBackend:
    service:
      name: churn_prediction_service
      port:
        number: 8002
